# Megatron-Bridge

./: .dev.commit  .gitignore  .gitmodules  .main.commit  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  model_support_request.yml  support_request.yml
.github/actions/test-template/: action.yml
.github/workflows/: _update_dependencies.yml  build-test-publish-wheel.yml  cache-hf-model.yml  changelog-build.yml  cherry-pick-release-commit.yml  cicd-approve-test-queue.yml  cicd-main.yml  claude-review.yml  copyright-check.yml  dependabot.yml  detect-secrets.yml  install-test.yml  release-docs.yml  release-freeze.yml  release.yaml
.github/workflows/config/: .secrets.baseline
docker/: Dockerfile.ci  Dockerfile.fw_base  Dockerfile.fw_final  README.md
docker/common/: README.md  _version.py  fw_pyproject.toml  install_cudnn.sh  install_nccl.sh  install_nsys.sh  print_sha.sh
docker/patches/: vllm.patch
docs/: conf.py  index.md  megatron-lm-to-megatron-bridge.md  parallelisms.md  performance-guide.md  performance-summary.md  project.json  skills-index.md  versions1.json
docs/models/llm/: README.md  gemma2.md  gemma3.md  glm45.md  gpt-oss.md  index.md  llama3.md  moonlight.md  nemotron3-super.md  nemotronh.md  olmoe.md  qwen.md
docs/models/vlm/: index.md  qwen35-vl.md
docs/releases/: README.md  changelog.md  known-issues.md  software-versions.md
docs/training/: README.md  checkpointing.md  communication-overlap.md  cuda-graphs.md  hybrid-context-parallel.md  logging.md  megatron-fsdp.md  packed-sequences.md  resiliency.md
examples/conversion/: README.md  compare_text_generation.py  convert_checkpoints_multi_gpu.py  hf_megatron_roundtrip_multi_gpu.py  hf_to_megatron_generate_audio_lm.py  hf_to_megatron_generate_nemotron_vlm.py  hf_to_megatron_generate_omni_lm.py  hf_to_megatron_generate_text.py  hf_to_megatron_generate_vlm.py
examples/conversion/adapter/: README.md  export_adapter.py  stream_adapter_weights.py  verify_adapter.py
examples/conversion/compare_hf_and_megatron/: compare.py
examples/diffusion/: README.md
examples/diffusion/override_configs/: README.md  wan_pretrain_sample_data.yaml
examples/diffusion/recipes/: README.md
examples/diffusion/recipes/flux/: README.md  finetune_flux.py  inference_flux.py  prepare_energon_dataset_flux.py  pretrain_flux.py
examples/diffusion/recipes/wan/: README-perf-test.md  README.md  inference_wan.py
examples/distillation/llama/: distill_llama32_3b-1b.py
examples/evaluation/: eval.sh
examples/inference/vlm/: vlm_inference.py
examples/models/gpt_oss/: README.md  conversion.sh  inference.sh  slurm_peft.sh  slurm_pretrain.sh  slurm_sft.sh
examples/models/minimax_m2/: README.md  slurm_conversion.sh  slurm_inference.sh
examples/models/nemotron_3/: finetune_nemotron_3_nano.py  slurm_peft.sh  slurm_pretrain.sh  slurm_sft.sh
examples/models/qwen3_next/: finetune_qwen3_next_80b_a3b.py
examples/models/sarvam/: README.md  conversion.sh  inference.sh
examples/models/step3/: PR_DESCRIPTION.md  README.md  slurm_conversion.sh  slurm_inference.sh  slurm_train.sh  train_step3_flash.py
examples/models/step3/conf/: step3_flash_sft_override.yaml
examples/models/vlm/glm_45v/: slurm_peft.sh  slurm_sft.sh
examples/models/vlm/ministral3/: README.md  peft_unpacked.sh  sft_unpacked.sh
examples/models/vlm/qwen25_omni/: README.md  conversion.sh  inference.sh
examples/peft/: merge_lora.py
examples/quantization/: export.py  ptq_generate.py  ptq_generate_vlm.py  quantize.py  quantize_utils.py  quantize_vlm.py
scripts/: run_ci_tests.sh  switch_mcore.sh  translate_mlm_to_bridge.py
scripts/performance/: README.md  argument_parser.py  perf_plugins.py  rubin_launch_interactive.sh  run_script.py  setup_experiment.py
scripts/performance/utils/: datasets.py  evaluate.py  overrides.py  utils.py
scripts/training/: README.md  launch_with_nemo_run.py  launch_with_sbatch.sh  run_recipe.py
skills/perf-techniques/: README.md
skills/perf-techniques/cuda-graphs/: SKILL.md  card.yaml
skills/perf-techniques/expert-parallel-overlap/: SKILL.md  card.yaml
skills/perf-techniques/hybrid-context-parallel/: SKILL.md  card.yaml
skills/perf-techniques/megatron-fsdp/: SKILL.md
skills/perf-techniques/packed-sequences-long-context/: SKILL.md
skills/perf-techniques/parallelism-strategies/: SKILL.md  card.yaml
skills/perf-techniques/sequence-packing/: SKILL.md  card.yaml
skills/perf-techniques/tp-dp-comm-overlap/: SKILL.md
skills/resiliency/: SKILL.md  card.yaml
tests/functional_tests/: L2_Launch_models_qwen_audio.sh  conftest.py  utils.py
tests/unit_tests/: Launch_Unit_Tests_Core.sh  Launch_Unit_Tests_Diffusion.sh  conftest.py  test_compare_mask_handling.py
tests/unit_tests/diffusion/: conftest.py
tests/unit_tests/models/: test_adapter_export.py  test_auto_bridge.py  test_distillation_provider.py  test_gpt_provider.py  test_model_bridge_lora.py  test_model_instantiation.py  test_models_imports.py  test_param_mapping.py  test_quant_mapping.py  test_transformer_config.py  test_utils_auto_map.py
tests/unit_tests/peft/: test_adapter_wrapper.py  test_canonical_lora.py  test_lora.py  test_utils.py
tests/unit_tests/recipes/: test_gemma3_recipes.py  test_gemma3_vl_recipes.py  test_glm45_recipes.py  test_glm_45v_recipes.py  test_gpt_oss_recipes.py  test_llama_recipes.py  test_ministral3_recipes.py  test_moonlight_recipes.py  test_nemotron_vl_recipes.py  test_nemotronh_recipes.py  test_olmoe_recipes.py  test_qwen_recipes.py  test_run_plugins.py
tests/unit_tests/training/: test_checkpointing.py  test_comm_overlap.py  test_config.py  test_decentralized_pg.py  test_deepep.py  test_initialize.py  test_log_non_default_values.py  test_mcore_commit.py  test_mixed_precision.py  test_model_load_save.py  test_optim.py  test_profiling.py  test_setup.py  test_state.py  test_vlm_step.py
tests/unit_tests/utils/: test_activation_map.py  test_translate_mlm_to_bridge.py
tutorials/recipes/llama/: 01_quickstart_finetune.py  02_pretrain_with_yaml.py  03_finetune_with_yaml.py
(+564 files in other folders)
